--- a/css/smash.scss
+++ b/css/smash.scss
@@ -111,4 +111,17 @@
 }
 
 
+.level {
+    position: absolute;
+    font-size: 40px;
+    color: red;
+    width: 100%;
+    height: 30px;
+    z-index: 99;
+    font-weight: bold;
+    text-align: center;
+    top: 50px;
+    display: none;
+}
+
 
